# EPS-2026-2

./: .gitignore  .safety-project.ini  README.md  RELATORIO.md  pyproject.toml  safety_scan.yml
.claude/: settings.local.json
.github/workflows/: ci.yml
tests/: test_placeholder.py
